[gd_scene load_steps=2 format=3 uid="uid://b58muftj2st80"]

[ext_resource type="Script" path="res://src/vridgeExtract.gd" id="1_1rjhp"]

[node name="VridgeExtract" type="Node"]
script = ExtResource("1_1rjhp")

[node name="MemoryUsage" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -23.0
offset_right = 21.5
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -84.0
offset_right = -88.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="LoadNOAH" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -15.0
offset_right = 103.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Extract NOAH Archive (.NOA)"

[node name="LoadG2D" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 112.0
offset_top = -15.0
offset_right = 346.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Extract From G2D Files (.G2D)"

[node name="decompBmpButton" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 68.0
offset_top = 56.0
offset_right = 239.0
offset_bottom = 87.0
button_pressed = true
text = "Decompress BMPs"

[node name="FushigiLoadNOAH" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.NOA")

[node name="FushigiLoadG2D" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.obj")

[node name="FushigiLoadFOLDER" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="pressed" from="Control/LoadNOAH" to="." method="_on_load_noah_pressed"]
[connection signal="pressed" from="Control/LoadG2D" to="." method="_on_load_g_2d_pressed"]
[connection signal="toggled" from="Control/decompBmpButton" to="." method="_on_decomp_bmp_button_toggled"]
[connection signal="file_selected" from="FushigiLoadNOAH" to="." method="_on_fushigi_load_noah_file_selected"]
[connection signal="files_selected" from="FushigiLoadG2D" to="." method="_on_fushigi_load_g_2d_files_selected"]
[connection signal="dir_selected" from="FushigiLoadFOLDER" to="." method="_on_fushigi_load_folder_dir_selected"]
